fix navbar z-index issue by making relative

--- a/my-project/styles/global.scss
+++ b/my-project/styles/global.scss
@@ -87,3 +87,10 @@ input:checked + div svg {
 	animation: slideout;
 	animation-duration: 1s;
 }
+
+.bgz {
+	z-index: 0;
+}
+.navbr {
+	z-index: 20;
+}
